fix errors visible header and footer

--- a/app/assets/scss/base/_global.scss
+++ b/app/assets/scss/base/_global.scss
@@ -27,11 +27,11 @@ html {
 
 
 
-// .app-header,
-// .app-footer {
-//     width: 100%;
-//     min-height: 90px;
-// }
+.app-header,
+.app-footer {
+    width: 100%;
+    min-height: 90px;
+}
 
 // .app-header__container{
 //     position: absolute;
@@ -64,7 +64,7 @@ html {
     }
 }
 
-.section {
-    height: 100vh;
-    padding: 40px 0;
-}
+// .section {
+//     height: 100vh;
+//     padding: 40px 0;
+// }
